--- a/src/com/vitor/calculadora/modelos/HistoricoModelo.fxml
+++ b/src/com/vitor/calculadora/modelos/HistoricoModelo.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane style="-fx-background-color: #101010;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <TextArea fx:id="textAreaHistorico" disable="true" editable="false" prefHeight="233.0" prefWidth="360.0" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <font>
-            <Font name="Arial Bold" size="15.0" />
-         </font>
-         <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </padding>
-      </TextArea>
-   </children>
+	<children>
+		<TextArea fx:id="textAreaHistorico" editable="false" prefHeight="233.0" prefWidth="360.0" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+			<font>
+				<Font name="Arial Bold" size="15.0" />
+			</font>
+			<padding>
+				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+			</padding>
+		</TextArea>
+	</children>
 </AnchorPane>
